RESOLVED FIXED250414
VibrationActuator should stop vibrating when its document becomes hidden
https://bugs.webkit.org/show_bug.cgi?id=250414
Summary VibrationActuator should stop vibrating when its document becomes hidden
Chris Dumez
Reported 2023-01-10 14:53:52 PST
VibrationActuator should stop vibrating when its document becomes hidden: - https://w3c.github.io/gamepad/extensions.html#gamepadhapticactuator-interface (Page Visibility section)
Attachments
Chris Dumez
Comment 1 2023-01-10 16:37:34 PST
EWS
Comment 2 2023-01-11 13:20:45 PST
Committed 258802@main (6d29a35a2b0d): <https://commits.webkit.org/258802@main> Reviewed commits have been landed. Closing PR #8497 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-01-11 13:21:17 PST
Note You need to log in before you can comment on or make changes to this bug.